CMAKE_MINIMUM_REQUIRED(VERSION 3.1)
PROJECT(dbcc )
set(CMAKE_USE_RELATIVE_PATHS ON)
set(CMAKE_CXX_STANDARD 11)

set(CMAKE_RUNTIME_OUTPUT_DIRECTORY ${PROJECT_SOURCE_DIR}/binary)
set(CMAKE_LIBRARY_OUTPUT_DIRECTORY ${PROJECT_SOURCE_DIR}/binary/lib)
set(CMAKE_ARCHIVE_OUTPUT_DIRECTORY ${PROJECT_SOURCE_DIR}/binary/lib)

set_property(GLOBAL PROPERTY USE_FOLDERS ON) 

if(MSVC)
add_definitions("-D_CRT_SECURE_NO_WARNINGS")
else()
SET(CMAKE_CXX_IMPLICIT_LINK_LIBRARIES "stdc++;") 
SET(CMAKE_CXX_IMPLICIT_LINK_DIRECTORIES "...")
endif()

set(CMAKE_SHARED_LIBRARY_SUFFIX ".passoa")
SET(CMAKE_SHARED_LIBRARY_PREFIX "")

add_library(dbcc SHARED
				${PROJECT_SOURCE_DIR}/src/index.cpp
				${PROJECT_SOURCE_DIR}/src/binding.cpp
				${PROJECT_SOURCE_DIR}/src/export.def
				${PROJECT_SOURCE_DIR}/mpc.c
				${PROJECT_SOURCE_DIR}/2json.c
				${PROJECT_SOURCE_DIR}/2c.c
				${PROJECT_SOURCE_DIR}/can.c
				${PROJECT_SOURCE_DIR}/util.c
				${PROJECT_SOURCE_DIR}/parse.c
				)
install(TARGETS dbcc RUNTIME DESTINATION node_modules/dbcc)
install(DIRECTORY ${PROJECT_SOURCE_DIR}/modules/stage/ DESTINATION node_modules/dbcc)